force-app/main/default/objects/DHS_Lead_Status_History__c/fields/DHS_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>DHS_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Lead_Status_Histories2</relationshipName>
    <type>Lookup</type>
</CustomField>