force-app/main/default/objects/DHS_Lead_Status_History__c/fields/DHS_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>DHS_Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Initiated_Lead_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>