force-app/main/default/objects/DHS_Lead_Status_History__c/fields/DHS_Lead__c.field-meta.xml
<CustomField>
    <fullName>DHS_Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>DHS_Lead__c</referenceTo>
    <relationshipLabel>Lead Status Histories</relationshipLabel>
    <relationshipName>DHS_Lead_Status_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>