force-app/main/default/objects/DHS_Lead_Status_History__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>