force-app/main/default/objects/DHS_Lead_Status_History__c/fields/Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Name__c</fullName>
    <label>Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>