force-app/main/default/objects/DHS_Lead_Status_History__c/fields/Status_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Start_Time__c</fullName>
    <label>Status Start Time</label>
    <type>DateTime</type>
</CustomField>